--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         if(name == nameIn){
             for(let i=0; i<10; i++){
                
-                alert(lisits[i]);
+                console(lisits[i]);
             }
         }
         else{
